--- a/MDS.App/MDS.App.vbproj
+++ b/MDS.App/MDS.App.vbproj
@@ -155,7 +155,9 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\datepicker.css" />
+    <Content Include="Content\holdon.css" />
     <Content Include="Content\jquery-confirm.css" />
+    <Content Include="Content\jquery-confirm.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
@@ -232,12 +234,14 @@
     <Content Include="Pages\Setup\InvoiceInfo.aspx" />
     <Content Include="Pages\Setup\InvoiceInfoList.aspx" />
     <Content Include="Scripts\bootstrap-datepicker.js" />
+    <Content Include="Scripts\holdon.js" />
     <Content Include="Scripts\ie9\html5shiv.js" />
     <Content Include="Scripts\ie9\respond.min.js" />
     <None Include="Scripts\jquery-1.12.4.intellisense.js" />
     <Content Include="Scripts\jquery-1.12.4.js" />
     <Content Include="Scripts\jquery-1.12.4.min.js" />
     <Content Include="Scripts\jquery-confirm.js" />
+    <Content Include="Scripts\jquery-confirm.min.js" />
     <Content Include="Scripts\jquery-ui-1.12.1.js" />
     <Content Include="Scripts\jquery-ui-1.12.1.min.js" />
     <Content Include="Test.aspx" />
