--- a/MDS.App/MDS.App.vbproj
+++ b/MDS.App/MDS.App.vbproj
@@ -154,6 +154,8 @@
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\chosen.css" />
+    <Content Include="Content\chosen.min.css" />
     <Content Include="Content\datatables.min.css" />
     <Content Include="Content\datepicker.css" />
     <Content Include="Content\holdon.css" />
@@ -237,6 +239,8 @@
     <Content Include="Pages\Setup\InvoiceInfo.aspx" />
     <Content Include="Pages\Setup\InvoiceInfoList.aspx" />
     <Content Include="Scripts\bootstrap-datepicker.js" />
+    <Content Include="Scripts\chosen.jquery.js" />
+    <Content Include="Scripts\chosen.jquery.min.js" />
     <Content Include="Scripts\datatables.min.js" />
     <Content Include="Scripts\holdon.js" />
     <Content Include="Scripts\ie9\html5shiv.js" />
