--- a/MDS.App/Web.config
+++ b/MDS.App/Web.config
@@ -29,6 +29,15 @@
     <customErrors mode="Off" />
     
   </system.web>
+
+  <system.web.extensions>
+    <scripting>
+      <webServices>
+        <jsonSerialization maxJsonLength="50000000"/>
+      </webServices>
+    </scripting>
+  </system.web.extensions>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
